# mangadown

./: .env.example  .gitignore  README  README.md  gmail.py  japscan.py  kindle.py  lirescan.py  mal.py  mangadown.py  mangapedia.py  pyproject.toml  requirements  requirements.txt  sendmails.py  settings.py  setup.py  utils.py
api/: __init__.py  gmail.py  kindle.py  mal.py  utils.py
api/backends/: __init__.py  japscan.py  lirescan.py  mangapedia.py  scantradfr.py
api/kcc/: comic2ebook.py
backends/: japscan.py  lirescan.py  mangapedia.py  scantradfr.py
kcc/: comic2ebook.py
mangadown/: __init__.py  tracked
mangadown/api/: __init__.py  gmail.py  kindle.py  mal.py  settings.py  utils.py
mangadown/api/backends/: __init__.py  japscan.py  lelmanga.py  lelscan.py  scan_fr.py  scantradfr.py
mangadown/cli/: mangadown.py  sendmails.py
src/mangadown/: __init__.py  cache.py  config.py  converter.py  downloader.py  email.py  mal.py  models.py  orchestrator.py  tracked.py
src/mangadown/backends/: __init__.py  lelmanga.py
src/mangadown/cli/: main.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_mal.py  test_models.py  test_orchestrator.py  test_tracked.py
